# writable/swagger.json
@@ -46,7 +46,13 @@
                         "content": {
                             "application\/json": {
                                 "schema": {
-                                    "$ref": "#\/components\/schemas\/User"
+                                    "properties": {
+                                        "token": {
+                                            "type": "string",
+                                            "example": "gsqGY_-\u00c7_\u00c8-ZAJNQSDKG_\u00c8-"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -55,6 +61,122 @@
                         "description": "Invalid credentials"
                     }
                 }
+            }
+        },
+        "\/api\/categories": {
+            "get": {
+                "operationId": "4c9994689bd473db782132950a007562",
+                "responses": {
+                    "200": {
+                        "description": "list categories",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "$ref": "#\/components\/schemas\/Category"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not allowed"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "operationId": "f2dd29d5c6ace4c861b61b1357564ecd",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application\/json": {
+                            "schema": {
+                                "$ref": "#\/components\/schemas\/FormCategory"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "create category",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "$ref": "#\/components\/schemas\/Category"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not allowed"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "\/api\/categories\/id": {
+            "put": {
+                "operationId": "3192dc23d47f1f62c709fdc7fb72a90e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application\/json": {
+                            "schema": {
+                                "$ref": "#\/components\/schemas\/FormCategory"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "create category",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "$ref": "#\/components\/schemas\/Category"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not allowed"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "operationId": "484a5a9382169b64fe2e2b7bbbe1b344",
+                "responses": {
+                    "200": {
+                        "description": "create category",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "$ref": "#\/components\/schemas\/Category"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not allowed"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "\/api\/users": {
@@ -110,6 +232,26 @@
     },
     "components": {
         "schemas": {
+            "Category": {
+                "type": "array",
+                "items": {
+                    "properties": {
+                        "id": {
+                            "description": "Identifiant unique de l'utilisateur",
+                            "type": "integer"
+                        },
+                        "name": {
+                            "description": "name category",
+                            "type": "string"
+                        },
+                        "slug": {
+                            "description": "slug category",
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
             "User": {
                 "type": "array",
                 "items": {
@@ -134,6 +276,19 @@
                     },
                     "type": "object"
                 }
+            },
+            "FormCategory": {
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "category name"
+                    },
+                    "slug": {
+                        "type": "string",
+                        "example": "category-slug"
+                    }
+                },
+                "type": "object"
             }
         },
         "securitySchemes": {
